--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -35,6 +35,11 @@
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustPan">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
         <activity
             android:name=".SearchActivity"
@@ -42,17 +47,11 @@
         </activity>
         <activity android:name=".MyCenterActivity">
         </activity>
-        <activity android:name=".AddressActivity"
-            android:launchMode="singleTask">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+        <activity android:name=".AddressActivity">
         </activity>
-        <activity android:name=".UpdateAddressActivity"
-            >
-
+        <activity android:name=".UpdateAddressActivity">
+        </activity>
+        <activity android:name=".PayActivity">
         </activity>
     </application>
 
