--- a/build.gradle
+++ b/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.wuxiaolong.pullloadmorerecyclerview:library:1.0.5'
     compile files('libs/Msc.jar')
     compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.android.support:support-annotations:23.3.0'
 }
