--- a/build.gradle
+++ b/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     compile files('libs/Msc.jar')
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.android.support:support-annotations:23.3.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:support-v4:19.1.0'
 }
