--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -35,7 +35,6 @@
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustPan">
-
         </activity>
         <activity
             android:name=".SearchActivity"
@@ -55,6 +54,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".UsermessagePasswordActivity">
+        </activity>
+        <activity android:name=".UserBarcodeActivity">
         </activity>
     </application>
 
