--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="cn.elife.elife">
 
-    <uses-permission android:name="android.permission.INTERNET" />
     <!-- 科大讯飞相关权限 -->
     <!-- 连接网络权限，用于执行云端语音能力 -->
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -26,7 +25,6 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
 
     <!-- 科大讯飞相关权限结束 -->
-
     <application
         android:name="cn.elife.application.MyAppliaction"
         android:allowBackup="true"
@@ -54,10 +52,8 @@
 
         </activity>
         <activity android:name=".UpdateAddressActivity">
-
         </activity>
-        <activity android:name=".SnacksActivity">
-
+        <activity android:name=".PayActivity">
         </activity>
     </application>
 
