--- a/build.gradle
+++ b/build.gradle
@@ -36,5 +36,7 @@ dependencies {
     compile files('libs/Msc.jar')
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.android.support:support-annotations:23.3.0'
+    compile files('libs/core-3.2.1.jar')
+    compile files('libs/core-3.0.0.jar')
 }
 
