修改添加了大量文件，注意整合公共文件---wgy

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -44,9 +44,11 @@
         <activity
             android:name=".SearchActivity"
             android:windowSoftInputMode="adjustPan">
+
         </activity>
 
-        <activity android:name=".AddressActivity">
+        <activity android:name=".AddressActivity"
+                  android:launchMode="singleTask">
 
         </activity>
         <activity android:name=".UpdateAddressActivity">
