--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     compile files('libs/Msc.jar')
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.android.support:support-annotations:23.3.0'
+
+    compile 'com.journeyapps:zxing-android-embedded:2.3.0@aar'
+    compile 'com.journeyapps:zxing-android-legacy:2.3.0@aar'
+    compile 'com.journeyapps:zxing-android-integration:2.3.0@aar'
+    compile 'com.google.zxing:core:3.2.0'
 }
 
 
