完成了商家详情页和商家所有宝贝页面

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -35,7 +35,6 @@
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustPan">
-
         </activity>
         <activity
             android:name=".SearchActivity"
@@ -48,18 +47,22 @@
         <activity android:name=".UpdateAddressActivity">
         </activity>
         <activity android:name=".UserMessageActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-
         </activity>
         <activity android:name=".UserPassActivity">
         </activity>
         <activity android:name=".UserBarcodeActivity">
         </activity>
         <activity android:name=".PayActivity">
+        </activity>
+        <activity android:name=".MerchantDetailActivity">
+
+        </activity>
+        <activity android:name=".MyNewsActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
     </application>
 
