首页调整好了，聊天页面做完了

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -35,6 +35,11 @@
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustPan">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+
         </activity>
         <activity
             android:name=".SearchActivity"
@@ -61,10 +66,12 @@
         <activity android:name=".MyNewsActivity">
         </activity>
         <activity android:name=".DetailGoodsActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
+        </activity>
+        <activity android:name=".CommentListActivity">
+        </activity>
+        <activity android:name=".ChatActivity">
+
         </activity>
     </application>
+
 </manifest>
