完成了洗车详情界面

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -35,11 +35,6 @@
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="adjustPan">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity
             android:name=".SearchActivity"
@@ -49,10 +44,12 @@
         </activity>
         <activity android:name=".AddressActivity">
         </activity>
-        <!--<activity
+        <!--
+        <activity
             android:name=".AddressActivity"
             android:launchMode="singleTask">
-        </activity>-->
+        </activity>
+        -->
         <activity android:name=".UpdateAddressActivity">
         </activity>
         <activity android:name=".UserMessageActivity">
@@ -70,17 +67,20 @@
         <activity android:name=".WashCarActivity">
         </activity>
         <activity android:name=".CarDetailActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
         </activity>
         <activity android:name=".MyOrderActivity">
         </activity>
         <activity android:name=".SettingActivity">
         </activity>
         <activity android:name=".FeedBackActivity">
+        </activity>
+        <activity android:name=".CarOrderActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
     </application>
 
