--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="cn.elife.elife">
+    package="cn.elife.elife" >
 
     <!-- 科大讯飞相关权限 -->
     <!-- 连接网络权限，用于执行云端语音能力 -->
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <!-- 获取手机录音机使用权限，听写、识别、语义理解需要用到此权限 -->
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <!-- 读取网络信息状态 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- 获取当前wifi状态 -->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <!-- 允许程序改变网络连接状态 -->
-    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <!-- 读取手机信息权限 -->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <!-- 读取联系人权限，上传联系人需要用到此权限 -->
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <!-- 外存储写权限， 构建语法需要用到此权限 -->
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <!-- 外存储读权限，构建语法需要用到此权限 -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <!-- 配置权限，用来记录应用配置信息 -->
-    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <!-- 科大讯飞相关权限结束 -->
     <application
@@ -31,46 +31,47 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:windowSoftInputMode="adjustPan">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-
+            android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
             android:name=".SearchActivity"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="adjustPan" >
         </activity>
         <activity
             android:name=".AddressActivity"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask" >
         </activity>
-        <activity android:name=".MyCenterActivity">
+        <activity android:name=".MyCenterActivity" >
         </activity>
-        <activity android:name=".UpdateAddressActivity">
+        <activity android:name=".UpdateAddressActivity" >
         </activity>
-        <activity android:name=".UserMessageActivity">
+        <activity android:name=".UserMessageActivity" >
         </activity>
-        <activity android:name=".UserPassActivity">
+        <activity android:name=".UserPassActivity" >
         </activity>
-        <activity android:name=".UserBarcodeActivity">
+        <activity android:name=".UserBarcodeActivity" >
         </activity>
-        <activity android:name=".PayActivity">
+        <activity android:name=".PayActivity" >
         </activity>
-        <activity android:name=".MerchantDetailActivity">
+        <activity android:name=".MerchantDetailActivity" >
         </activity>
-        <activity android:name=".MyNewsActivity">
+        <activity android:name=".MyNewsActivity" >
         </activity>
-        <activity android:name=".DetailGoodsActivity">
+        <activity android:name=".DetailGoodsActivity" >
         </activity>
-        <activity android:name=".CommentListActivity">
+        <activity android:name=".CommentListActivity" >
         </activity>
-        <activity android:name=".ChatActivity">
+        <activity android:name=".ChatActivity" >
+        </activity>
+        <activity android:name=".SendMessageActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
